--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "sequelize": "^6.31.0",
     "source-map-loader": "^4.0.1",
     "sweetalert": "^2.1.2",
     "typescript": "^4.9.5",
